--- a/contact.html
+++ b/contact.html
@@ -1,39 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css.css" />
+  </head>
+  <body>
     <nav>
-        <h1><a href="main page.html">Movie App</a></h1>
-        <div class="nav">
-          <h3 class="home"><a href="main page.html">HOME</a></h3>
-          <h3 class="btw"><a href="#">Best of The Week</a></h3>
-          <h3 class="contact"><a href="contact.html">Contact</a></h3>
-        </div>
-      </nav>
-
-      <div class="banner"></div>
-
-      <div class="about">
-          <h1>Profile</h1>
+      <h1><a href="main page.html">Movie App</a></h1>
+      <div class="nav">
+        <h3 class="opsi"><a href="main page.html">HOME</a></h3>
+        <h3 class="opsi"><a href="BTW.html">Best of The Week</a></h3>
+        <h3 class="active"><a href="contact.html">Contact</a></h3>
       </div>
+    </nav>
 
-      <div class="container">
-        <div class="card">
-          <h1>Biodata</h1>
-          <img src="random.png" alt="pp" />
+    <div class="banner"></div>
+
+    <div class="about">
+      <h1>Profile</h1>
+    </div>
+
+    <div class="container">
+      <div class="card">
+        <div class="card-image">
+          <div class="profil">
+            <img src="pic/random.png" alt="" />
+          </div>
+        </div>
+        <div class="lower">
+          <h2>BIODATA</h2>
           <ul>
             <li>Nama : Faris</li>
             <li>Kelas : XI RPL 3</li>
             <li>TTD : 30 juli 2004</li>
+            <li>No telp: 089516079424</li>
           </ul>
+          <center>
+          <a class="link" href="https://twitter.com/yohan_desu"
+            ><img class="logo" src="pic/logo-rond-twitter.png" alt=""
+          /></a>
+          <a class="link" href="https://www.instagram.com/yohan_desu/"
+            ><img class="logo" src="pic/instagram-png-instagram-png-logo-1455-1024x1024.png" alt=""
+          /></a>
+          <img class="logo" src="" alt="" />
+        </center>
         </div>
       </div>
-    
-</body>
+    </div>
+  </body>
 </html>
