--- a/main page.html
+++ b/main page.html
@@ -1,32 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>movie app</title>
-    <link rel="stylesheet" href="css.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css.css" />
+  </head>
+  <body>
     <nav>
-        <h1><a href="main page.html">Movie App</a></h1>
-        <div class="nav">
-          <h3 class="home"><a href="#">HOME</a></h3>
-          <h3 class="btw"><a href="#">Best of The Week</a></h3>
-          <h3 class="contact"><a href="contact.html">Contact</a></h3>
-        </div>
-      </nav>
-      <div class="banner">
-        <h1 class="wc">Welcome</h1>
+      <h1><a href="main page.html">Movie App</a></h1>
+      <div class="nav">
+        <h3 class="active"><a href="main page.html">HOME</a></h3>
+        <h3><a href="BTW.html">Best of The Week</a></h3>
+        <h3><a href="contact.html">Contact</a></h3>
       </div>
-      <div class="about">
-        <h1 class="aj">ABOUT</h1>
-        <p>
-            <b>Movie App</b> Menampilkan film film terbaik untuk anda tonton.
+    </nav>
+    <div class="banner">
+      <h1>Welcome</h1>
+    </div>
+    <div class="about">
+      <h1>ABOUT</h1>
+      <p>
+        <b>Movie App</b> Menampilkan film film terbaik dari berbagai waktu untuk
+        anda tonton.
+      </p>
+    </div>
+
+    <div class="container1">
+      <h1 class="headtittle">Best Of The Week</h1>
+      <div class="box">
+        <a href="nhw.html"
+          ><img src="pic/Spider-Man_No_Way_Home_poster.jpg" alt=""
+        /></a>
+        <a href="avanger.html"><img src="pic/posters_4_1500.jpg" alt="" /></a>
+        <a href="shangchi.html"><img src="pic/shang-chi-e1619039488938.jpg" alt="" /></a>
+        <a href="roselia.html"><img src="pic/roselia.jpg" alt="" /></a>
+        <a href="mortalkombat.html"><img src="pic/wp8626135.jpg" alt="" /></a>
+      </div>
+    </div>
+    <div class="container1">
+      <h1 class="headtittle">More Movie</h1>
+      <div class="box">
+        <a href=""><img src="pic/New-Anime-Movies-2021-1.jpg" alt="" /></a>
+        <a href=""><img src="pic/kimetsu-mugentrain-1.jpg" alt="" /></a>
+        <a href=""><img src="pic/2osa7k5vxph71.jpg" alt="" /></a>
+        <a href=""><img src="pic/komi.jpg" alt="" /></a>
+        <a href=""><img src="pic/Godzilla-vs-Kong-thumb.jpg" alt="" /></a>
+        <a href=""><img src="pic/5245550.jpg" alt="" /></a>
+        <a href=""
+          ><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt=""
+        /></a>
+        <a href=""
+          ><img src="pic/05000-boss-baby-family-business-poster.jpg" alt=""
+        /></a>
+        <a href=""><img src="pic/upzdxqJ6Rs5d92Vl6pjiYrWh4iH.jpg" alt="" /></a>
+        <a href=""><img src="pic/The_Suicide_Squad.jpg" alt="" /></a>
+      </div>
+    </div>
+    <div class="email">
+      <img class="pr" src="pic/E46Sjm5VEAAey10.jpg" alt="" />
+      <div class="Sapa">
+        <div class="input">
+          <h1>Halo!</h1>
+          <p>
+            Sapa kamu bisa sekedar menyapa atau mengirimkan saran dan kritik
+            disini!
           </p>
+          <input type="email" placeholder="Masukan saran" />
+          <button>Kirim</button>
+        </div>
       </div>
-
-
-    
-</body>
+    </div>
+    <footer>
+      <h4>Copyright by Faris</h4>
+    </footer>
+  </body>
 </html>
