project movie app

--- a/blackwidow.html
+++ b/blackwidow.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avenger End Game</title>
+    <title>blackwidow(2021)</title>
     <link rel="stylesheet" href="css.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -17,10 +17,10 @@
           <h3><a href="contact.html">Contact</a></h3>
         </div>
       </nav>
-
-      <div class="Avenger"></div>
+  
+      <div class="bw"></div>
       <div class="border"></div>
-      
+  
       <div class="deskripsi">
         <h1 class="head">Deskripsi</h1>
         <p>
@@ -47,22 +47,23 @@
       <div class="trailer">
         <h1 class="head">Trailer</h1>
         <iframe
-          src="https://www.youtube.com/embed/TcMBFSGVi1c"
+          src="https://www.youtube.com/embed/ybji16u608U"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
           allowfullscreen
         ></iframe>
       </div>
-
-
+  
       <div class="filmlain">
         <h1>Film Lainnya</h1>
         <div class="box">
-          <a href="#"><img src="pic/2osa7k5vxph71.jpg" alt="" /></a>
-          <a href="#"><img src="pic/5245550.jpg" alt="" /></a>
-          <a href="#"><img src="pic/shang-chi-e1619039488938.jpg" alt="" /></a>
-          <a href="#"><img src="pic/Godzilla-vs-Kong-thumb.jpg" alt="" /></a>
+          <a href="#"><img src="pic/komi.jpg" alt="" /></a>
+          <a href="#"><img src="pic/kimetsu-mugentrain-1.jpg" alt="" /></a>
+          <a href="#"><img src="pic/New-Anime-Movies-2021-1.jpg" alt="" /></a>
+          <a href="#"
+            ><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt=""
+          /></a>
         </div>
       </div>
   
