--- a/gintama.html
+++ b/gintama.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>roselia</title>
+    <title>gintama movie</title>
     <link rel="stylesheet" href="css.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
@@ -18,7 +18,7 @@
       </div>
     </nav>
 
-    <div class="roselia"></div>
+    <div class="gintamamovie"></div>
     <div class="border"></div>
 
     <div class="deskripsi">
@@ -47,7 +47,7 @@
     <div class="trailer">
       <h1 class="head">Trailer</h1>
       <iframe
-        src="https://www.youtube.com/embed/s9BFfogbwYc"
+        src="https://www.youtube.com/embed/GWeuZr6fT6o"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -58,8 +58,8 @@
     <div class="filmlain">
       <h1>Film Lainnya</h1>
       <div class="box">
-        <a href="#"><img src="pic/komi.jpg" alt="" /></a>
-        <a href="#"><img src="pic/kimetsu-mugentrain-1.jpg" alt="" /></a>
+        <a href="#"><img src="pic/mortal kombat.jpg" alt="" /></a>
+        <a href="#"><img src="pic/Spider-Man_No_Way_Home_poster.jpg" alt="" /></a>
         <a href="#"><img src="pic/New-Anime-Movies-2021-1.jpg" alt="" /></a>
         <a href="#"
           ><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt=""
