--- a/komi.html
+++ b/komi.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>roselia</title>
+    <title>komi-san</title>
     <link rel="stylesheet" href="css.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
@@ -18,7 +18,7 @@
       </div>
     </nav>
 
-    <div class="roselia"></div>
+    <div class="komi"></div>
     <div class="border"></div>
 
     <div class="deskripsi">
@@ -47,7 +47,7 @@
     <div class="trailer">
       <h1 class="head">Trailer</h1>
       <iframe
-        src="https://www.youtube.com/embed/s9BFfogbwYc"
+        src="https://www.youtube.com/embed/fp8V8OXDeZc"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
