--- a/main page.html
+++ b/main page.html
@@ -33,29 +33,29 @@
         <a href="nhw.html"
           ><img src="pic/Spider-Man_No_Way_Home_poster.jpg" alt=""
         /></a>
-        <a href="avanger.html"><img src="pic/posters_4_1500.jpg" alt="" /></a>
+        <a href="avanger.html"><img src="pic/avanger end game.jpg" alt="" /></a>
         <a href="shangchi.html"><img src="pic/shang-chi-e1619039488938.jpg" alt="" /></a>
         <a href="roselia.html"><img src="pic/roselia.jpg" alt="" /></a>
-        <a href="mortalkombat.html"><img src="pic/wp8626135.jpg" alt="" /></a>
+        <a href="mortalkombat.html"><img src="pic/mortal kombat.jpg" alt="" /></a>
       </div>
     </div>
     <div class="container1">
       <h1 class="headtittle">More Movie</h1>
       <div class="box">
-        <a href=""><img src="pic/New-Anime-Movies-2021-1.jpg" alt="" /></a>
-        <a href=""><img src="pic/kimetsu-mugentrain-1.jpg" alt="" /></a>
-        <a href=""><img src="pic/2osa7k5vxph71.jpg" alt="" /></a>
-        <a href=""><img src="pic/komi.jpg" alt="" /></a>
-        <a href=""><img src="pic/Godzilla-vs-Kong-thumb.jpg" alt="" /></a>
-        <a href=""><img src="pic/5245550.jpg" alt="" /></a>
-        <a href=""
+        <a href="gintama.html"><img src="pic/New-Anime-Movies-2021-1.jpg" alt="" /></a>
+        <a href="kimetsu.html"><img src="pic/kimetsu-mugentrain-1.jpg" alt="" /></a>
+        <a href="venom.html"><img src="pic/2osa7k5vxph71.jpg" alt="" /></a>
+        <a href="komi.html"><img src="pic/komi.jpg" alt="" /></a>
+        <a href="godzilavskong.html"><img src="pic/Godzilla-vs-Kong-thumb.jpg" alt="" /></a>
+        <a href="blackwidow.html"><img src="pic/black widow.jpg" alt="" /></a>
+        <a href="fatemovie.html"
           ><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt=""
         /></a>
-        <a href=""
+        <a href="bossbaby.html"
           ><img src="pic/05000-boss-baby-family-business-poster.jpg" alt=""
         /></a>
-        <a href=""><img src="pic/upzdxqJ6Rs5d92Vl6pjiYrWh4iH.jpg" alt="" /></a>
-        <a href=""><img src="pic/The_Suicide_Squad.jpg" alt="" /></a>
+        <a href="tom&jerry.html"><img src="pic/tom and jerry.jpg" alt="" /></a>
+        <a href="suicidesquad.html"><img src="pic/The_Suicide_Squad.jpg" alt="" /></a>
       </div>
     </div>
     <div class="email">
