--- a/nhw.html
+++ b/nhw.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spiderman No Way Home</title>
     <link rel="stylesheet" href="css.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav>
@@ -18,10 +18,9 @@
       </div>
     </nav>
 
-
     <div class="nhw"></div>
     <div class="border"></div>
-    
+
     <div class="deskripsi">
       <h1 class="head">Deskripsi</h1>
       <p>
@@ -48,7 +47,7 @@
     <div class="trailer">
       <h1 class="head">Trailer</h1>
       <iframe
-        src="https://www.youtube.com/watch?v=JfVOs4VSpmA&t=3s"
+        src="https://www.youtube.com/embed/JfVOs4VSpmA"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -56,18 +55,16 @@
       ></iframe>
     </div>
 
-
     <div class="filmlain">
       <h1>Film Lainnya</h1>
       <div class="box">
         <a href="#"><img src="pic/2osa7k5vxph71.jpg" alt="" /></a>
         <a href="#"><img src="pic/wp8626135.jpg" alt="" /></a>
         <a href="#"><img src="pic/5245550.jpg" alt="" /></a>
-        <a href="#"><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt="" /></a>
+        <a href="#"
+          ><img src="pic/fate-grand-order-the-movie-734x1024.jpg" alt=""
+        /></a>
       </div>
     </div>
-
-    
-
   </body>
 </html>
