--- a/shangchi.html
+++ b/shangchi.html
@@ -47,7 +47,7 @@
       <div class="trailer">
         <h1 class="head">Trailer</h1>
         <iframe
-          src="https://www.youtube.com/watch?v=TcMBFSGVi1c"
+          src="https://www.youtube.com/embed/s9BFfogbwYc"
           title="YouTube video player"
           frameborder="0"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
